# ledstrip_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  Caddyfile  Dockerfile  LICENSE  README.md  build-and-deploy.sh  build.sh  config.json  deploy.sh  deploy_editor.sh  deploy_frontend.sh  dub.sdl  dub.selections.json  pull-data.sh  site.conf  submit.py  test.lua
data/: 3dprinter.lua  alarm.lua  binary_clock.lua  binary_counter.bf  cammie_watch_count.lua  cammiechat_morse.lua  config.json  fill.lua  flashbang.lua  flashlight.lua  flashlight.py  music_progress.lua  rainbow.lua  rainbow_small.lua  sirens.lua  song_vote.lua  test.bf  weather.lua  zeus3d.lua  zoranje.lua
demo/: 0.lua  1.lua  2.lua  7.lua
editor/: LedBlocks.ts  README.md  Utils.ts  index.html  index.ts  package-lock.json  package.json
frontend/: index.html  main.js  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.tsx  Fps.tsx  Segments.tsx  States.css  States.tsx  main.tsx
lua-5.4.3/: CMakeLists.txt
lua-language-server-ws/: .gitignore  Dockerfile.lua-language-server  config.lua  package.json  pnpm-lock.yaml
lua-language-server-ws/meta/: basic.lua  bit.lua  string.lua  (+1 more)
main/: CMakeLists.txt  config.hpp  interpreter_config.h  log.h  main.cpp  safequeue.hpp
main/language/: language.hpp  lualanguage.hpp
main/languagebackend/: languagebackend.hpp  ledstriplanguagebackend.hpp  log.h  messagecontainer.hpp  virtuallanguagebackend.hpp
source/: config.d  ct_config.d  data_dir.d  emmylua_modified.d  mailbox.d  main.d  mqtt.d  singleton.d  thread_manager.d  util.d
views/: editor.dt
(+108 files in other folders)
